# Sunray

./: .gitignore  .gitmodules  CLI冲突解决.md  build.sh  install_dependencies.sh  uav_control_sim.sh
External_Module/sunray_detection/detection_msg/: CMakeLists.txt  package.xml
External_Module/sunray_detection/detection_msg/msg/: TargetMsg.msg  TargetsInFrameMsg.msg
External_Module/sunray_detection/undistort_image/: CMakeLists.txt  package.xml
External_Module/sunray_detection/undistort_image/src/: undistort_image.cpp
External_Module/sunray_detection/yolov7/: CMakeLists.txt  nodelet_plugins.xml  package.xml
External_Module/sunray_detection/yolov7/config/: algorithm_params.yaml  head_camera.yaml  rosconsole.config
External_Module/sunray_detection/yolov7/include/: aidetection_yolov7_detector.h  postprocessor_utils.h
General_Module/sunray_fmt_control/: CMakeLists.txt  README.md  package.xml
General_Module/sunray_fmt_control/include/: FMTControl.h  FMTexternalFusion.h
General_Module/sunray_fmt_control/launch/: fmt_auto_mission_demo.launch  fmt_external_fusion.launch  fmt_position_demo.launch  sunray_fmt_control_node.launch  sunray_mavros_exp.launch
General_Module/sunray_fmt_control/src/: fmt_control.cpp  fmt_control_node.cpp  fmt_externalFusion.cpp  fmt_external_fusion_node.cpp
General_Module/sunray_fmt_control/test/: fmt_auto_mission.cpp  fmt_topic_test.cpp  vrpn_to_vision_pose.cpp
General_Module/sunray_tutorial/: CMakeLists.txt
General_Module/sunray_tutorial/advanced/: auto_land.cpp  land_on_a_moving_car.cpp  search_target_and_send_to_ugv.cpp  simple_obstacle_avoidance.backup  simple_obstacle_avoidance.cpp  simple_obstacle_avoidance_d435i.cpp
General_Module/sunray_tutorial/launch/: auto_land_by_pose.launch  follow_car_xyvelzposyawbody.launch  follow_tag_xyzvelyawbody.launch  land_on_a_moving_car.launch  landmark_detection.launch  run_demo.launch  search_target_and_send_to_ugv.launch  simple_obstacle_avoidance.launch  simple_obstacle_avoidance_d435i.launch  ugv_test_demo.launch
General_Module/sunray_tutorial/scripts/: random_goal.py
General_Module/sunray_tutorial/src/: auto_land.cpp  auto_land_by_pose.cpp  block_pos.cpp  circle_vel.cpp  circle_vel_with_time.cpp  circle_z_pos.cpp  follow_a_tag.cpp  pos_body_hexagon.cpp  takeoff_hover_land.cpp  ugv_block_pos.cpp  ugv_circle_vel_body.cpp
General_Module/sunray_tutorial/uav_basic/: block_xyzpos.cpp  circle_xyvelzpos.cpp  circle_xyzvel.cpp  follow_car_xyvelzposyawbody.cpp  follow_tag_xyzvelyawbody.cpp  hexagon_xyzposyawbody.cpp  takeoff_hover_land.cpp  triangle_xyzpos.cpp  triangle_xyzvel.cpp
General_Module/sunray_tutorial/uav_python/: block_pos.py  circle_vel.py  circle_z_pos.py  pos_body_hexagon.py  takeoff_hover_land.py
General_Module/sunray_tutorial/ugv_basic/: ugv_block_pos.cpp  ugv_circle_vel.cpp  ugv_circle_vel_body.cpp
General_Module/sunray_tutorial/ugv_python/: ugv_block_pos.py  ugv_circle_vel.py  ugv_circle_vel_body.py
General_Module/sunray_uav_control/: CMakeLists.txt
General_Module/sunray_uav_control/config/: uav_control_param.yaml  uav_control_param_sim.yaml
General_Module/sunray_uav_control/externalFusion/: ExternalPosition.h  MovingAverageFilter.h  externalFusion.cpp  externalFusion.h  external_fusion_node.cpp
General_Module/sunray_uav_control/include/: ExternalPosition.h  UAVControl.h  externalFusion.h  rc_input.h  type_mask.h
General_Module/sunray_uav_control/launch/: external_fusion.launch  external_fusion_swarm.launch  rc_control.launch  sunray_control_node.launch  sunray_control_node_swarm.launch  sunray_mavros_exp.launch  sunray_vrpn.launch
General_Module/sunray_uav_control/launch_utils/: rviz_goal_bridge.launch  terminal_control.launch
General_Module/sunray_uav_control/mavlink/: autopilot_interface.cpp  mavlink_control.cpp  serial_port.cpp
General_Module/sunray_uav_control/rc_input/: joy_node.cpp  rc_input.h  rc_input_node.cpp
General_Module/sunray_uav_control/rviz/: 2d_nav_goal.rviz  image_marker_publisher.cpp
General_Module/sunray_uav_control/src/: Waypoint.h  externalFusion.cpp  external_fusion_node.cpp  rc_control_node.cpp  uav_control.cpp  uav_control_node.cpp  waypoint_mission_node.cpp
General_Module/sunray_uav_control/uav_control/: UAVControl.cpp  UAVControl.h  rviz_goal_bridge_node.cpp  uav_control.cpp  uav_control_node.cpp
General_Module/sunray_uav_control/utils/: PX4ParamManager.cpp  RvizGoalBridge.cpp  RvizGoalBridge.h  WGS84_test.cpp  control_evaluation_node.cpp  flip_stop.cpp  positioning_accuracy.cpp  px4_param_test.cpp  px4_param_test_class.cpp  sunray_logger_test.cpp  terminal_control.cpp  uav_command_pub.cpp
General_Module/sunray_uav_control/waypoint/: Waypoint.h  send_global_waypoint.sh  send_local_waypoint.sh  waypoint.launch  waypoint_mission_node.cpp  waypoint_mission_node.launch  waypoint_pub.cpp
Simulation/sysu_competition/: CMakeLists.txt  package.xml
Simulation/sysu_competition/launch/: case1.launch  empty_world.launch  sunray_sim.rviz  tianjin.launch
Simulation/sysu_competition/src/: cmd_to_odom.cpp  fake_odom_node copy.cpp  gazebo_model.cpp  gazebo_model.h  gazebo_model_node.cpp  uav3_point.txt
Simulation/sysu_competition/worlds/: case1.world  case2.world  tianjin.world  venue.world
Simulation/sysu_competition/worlds/place/: tianjin.stl  (+1 more)
buildscripts copy/tui/: CMakeLists.txt
buildscripts copy/tui/include/: config_loader.hpp  terminal_guard.hpp  terminal_reset.hpp  ui_core.hpp
buildscripts copy/tui/src/: screen_coordinate_mapper.cpp  terminal_guard.cpp  ui_core.cpp  ui_tui.cpp
buildscripts/tui/: CMakeLists.txt  DEBUG_USAGE.md  build_debug.sh
buildscripts/tui/include/: screen_coordinate_mapper.hpp  terminal_core.hpp  terminal_guard.hpp  terminal_reset.hpp  tui_core.hpp  tui_logic.hpp  tui_render.hpp  tui_screen.hpp  ui_core.hpp  ui_renderer.hpp
buildscripts/tui/src/: screen_coordinate_mapper.cpp  terminal_guard.cpp  tui_config.cpp  tui_core.cpp  tui_interaction.cpp  tui_logic.cpp  tui_main.cpp  tui_render.cpp  tui_render_buttons.cpp  tui_render_component.cpp  tui_render_mouse.cpp  tui_screen.cpp  ui_core.cpp
(+273 files in other folders)
