<?xml version="1.0"?>
<package format="2">
  <name>sunray_fmt_control</name>
  <version>0.0.1</version>
  <description>专门用于FMT飞控控制话题的功能包</description>

  <maintainer email="sirui@yundrone.com">YunDrone Tech</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>sunray_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sunray_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
